Revision history for {{$dist->name}}

{{$NEXT}}
  - Release candidate 2
  - arguments are available during custom return type even when
    platform does not support alloca
  - More documentation and examples

0.10      2015-01-20 04:06:17 -0500
  - Release candidate 1
  - Added custom Types API (see FFI::Platypus::API)
  - Added String Pointer custom type (FFI::Platypus::Type::StringPointer)
  - Added Pointer / Size Buffer custom type (FFI::Platypus::Type::PointerSizeBuffer)

0.09      2015-01-19 03:01:48 -0500
  - Third beta
  - moved cast and sizeof from FFI::Platypus::Memory
    into FFI::Platypus methods.
  - cast and size of functions for FFI::Platypus::Declare
  - attach_cast for faster casting
  - renamed FFI::Platypus::Declare#function to
    FFI::Platypus::Declare#attach to more closely match
    the OO interface
  - adjusted custom type interface
    - renamed ffi_to_perl native_to_perl
    - renamed perl_to_ffi perl_to_native
    - type argument is now part of the hash and is called
      native_type

0.08      2015-01-16 10:55:14 -0500
  - Second beta
  - add FFI::Platypus::Buffer
    stole the buffer functions from FFI::Util
    can do this with cast, but cast is slow
  - Fixed bug where cast didn't work with closures.
  - closure data now free'd when it the closure
    goes out of scope (GH#4)

0.07      2015-01-15 18:53:45 -0500
  - First (mostly complete) beta
  - workaround some issues with closures
  - much more comprehensive documentation

0.06      2015-01-14 17:13:57 -0500
  - fix typo in last version that broke 32 bit Perls.  oops.

0.05      2015-01-14 17:04:25 -0500
  - Forth (and mostly complete) alpha
  - custom types written in Perl are supported.
  - bug fixes for 32 bit Perls (with compilers that support int64_t)

0.04      2015-01-13 11:14:54 -0500
  - Third (and incomplete) alpha
  - all basic types supported everywhere
  - closures do not support non basic types or returning strings from a closure
