@@ -59,6 +59,15 @@ sub new
     print "  + making Math::Int64 a prerequsite (not normally done on 64 bit Perls)\n";
     print "  + using Math::Int64's C API to manipulate 64 bit values (not normally done on 64 bit Perls)\n";
     print "\n\n";
+    $self->config(config_debug_fake32 => 1);
+  }
+  if($ENV{FFI_PLATYPUS_NO_ALLOCA})
+  {
+    print "\n\n";
+    print "NO_ALLOCA:\n";
+    print "  + alloca() will not be used, even if your platform supports it.\n";
+    print "\n\n";
+    $self->config(config_no_alloca => 1);
   }
   
   $self->add_to_cleanup(
