@@ -5,6 +5,7 @@ Revision history for {{$dist->name}}
   - arguments are available during custom return type even when
     platform does not support alloca
   - More documentation and examples
+  - FFI::Platypus::API now use prototypes so you can skip the ()
 
 0.10      2015-01-20 04:06:17 -0500
   - Release candidate 1
